--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -1,5 +1,6 @@
 @import '../lib/colors.scss';
 @import '../lib/bootstrap/scss/bootstrap-flex';
+@import 'homework.scss';
 
 .section-homework {
   width: 100%;
@@ -29,7 +30,6 @@
       margin-left: 7px;
     }
   }
-  
   .description,
   .feedback {
     color: grey;
