--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -1,15 +1,14 @@
+@import '../lib/bootstrap/scss/bootstrap-flex';
 .homework {
-  a {
-    color: #373a3c;
-    &:hover {
-      text-decoration: none;
-      color: #373a3c;
-    }
-  }
   .description {
     margin: 10px 0;
     min-height: 75px;
-    color: grey;
+    color: #373a3c;
+    a{
+      text-decoration: underline;
+    }
+    text-decoration:none;
+    &:hover{text-decoration:none;}
     word-break: break-all;
     @include media-breakpoint-down(xs) {
       margin-right: 25px;
@@ -19,6 +18,7 @@
     h3 {font-size: 1.1rem;font-style:italic;text-decoration:underline}
     p  {font-size: 1rem;margin-bottom:.25rem;}
     blockquote{
+      color: grey;
       margin-left: 1rem;
       border-left: 2px solid grey;
       padding-left: 5px;
