--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -113,6 +113,16 @@
                             </div>
                         </li>
 
+                        <li class="nav-item qr-code-action">
+                            <div class="dropdown">
+                                <a class="btn btn-secondary btn-thin btn-create-qr dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-question"></i>
+                                </a>
+                                <div class="dropdown-menu">
+                                </div>
+                            </div>
+                        </li>
+
                         {{#if currentSchoolData}}
                             <li class="nav-item school-data">{{ currentSchoolData.name }}</li>
                             {{#if currentSchoolData.federalState}}
