--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -5,7 +5,7 @@
     {{/content}}
 
     {{#content "page"}}
-        <section class="changelog">
+        <section class="changelog" id="changelog">
             <h4>Neuste Features</h4>
             <div class="container-fluid">
                 <div class="row">
