--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -5,6 +5,54 @@
     {{/content}}
 
     {{#content "page"}}
+        <section class="faqpanel">
+            <div class="container-fluid">
+                <div class="row">
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                                <div class="card h-100">
+                                    <div class="img-out">
+                                        <img class="card-img-top circular" src="/images/login-left.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-block">
+                                        <h4 class="card-title">Häufig gestellte Fragen</h4>
+                                        <p class="card-text">Hier werden die meistgefragten Fragen zu dem Thema Schul-Cloud beantwortet.</p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a href="faq" class="btn btn-primary">Zu den Fragen</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                                <div class="card h-100">
+                                    <div class="img-out">
+                                        <img class="card-img-top circular" src="/images/login-right.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-block">
+                                        <h4 class="card-title">Platzhalter Titel</h4>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a href="#" class="btn btn-primary disabled">Zum Platzhalter</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-4 col-sm-6 col-xs-12">
+                                <div class="card h-100">
+                                    <div class="img-out">
+                                        <img class="card-img-top circular" src="/images/login-left.png" alt="Card image cap">
+                                    </div>
+                                    <div class="card-block">
+                                        <h4 class="card-title">Platzhalter Titel</h4>
+                                        <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                                    </div>
+                                    <div class="card-footer">
+                                        <a href="#" class="btn btn-primary disabled">Zum Platzhalter</a>
+                                    </div>
+                                </div>
+                            </div>
+                </div>
+            </div>
+        </section>
         <section class="changelog" id="changelog">
             <h4>Neuste Features</h4>
             <div class="container-fluid">
