--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -142,7 +142,11 @@
                                         {{this.name}}
                                     </h5>
                                     <div class="description">
-                                        {{{truncate this.description}}}
+                                        {{if this.description}}
+                                            {{{truncate this.description}}}
+                                        {{else}}
+                                            keine Beschreibung vorhanden
+                                        {{/if}}
                                     </div>
                                 </a>
                                 {{#ifvalue this.teacherId value=this.currentUser._id}}
