fixed issue "511 Schüler können eigene Abgabe nicht mehr im Abgabetab sehen, nachdem das Abgabedatum überschritten wurde"

--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -20,8 +20,8 @@
 
     {{else}}
         <div class="comment">
-			{{#if comment}}
-				{{{comment}}}
+			{{#if submission.comment}}
+				{{{submission.comment}}}
 			{{else}}
 				<p>Keine Abgabe.</p>
 			{{/if}}
