add missing char

--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -1,7 +1,7 @@
 <section id="extended" class="tab-content section-homeworkdetails active">
     <div class="homework">
         <div class="description">
-            {{if this.description}}
+            {{#if this.description}}
                 {{{truncate this.description}}}
             {{else}}
                 keine Beschreibung vorhanden
