--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -142,7 +142,7 @@
                                         {{this.name}}
                                     </h5>
                                     <div class="description">
-                                        {{if this.description}}
+                                        {{#if this.description}}
                                             {{{truncate this.description}}}
                                         {{else}}
                                             keine Beschreibung vorhanden
