remove truncated for detailed view

--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -2,7 +2,7 @@
     <div class="homework">
         <div class="description">
             {{#if this.description}}
-                {{{truncate this.description}}}
+                {{{this.description}}}
             {{else}}
                 keine Beschreibung vorhanden
             {{/if}}
