add resize listener

--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -70,6 +70,7 @@ aside.nav-sidebar {
             list-style-type: none;
             padding: 0px;
             margin: 0px;
+            overflow-y: auto;
 
             li {
                 width: 100%;
