--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -18,6 +18,10 @@
         <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
             setupFirebasePush();
+            $('.sidebar-list').css({"height": window.innerHeight});
+        });
+        window.addEventListener("resize", function () {
+            $('.sidebar-list').css({"height": window.innerHeight});
         });
         </script>
     {{/content}}
@@ -25,7 +29,7 @@
     {{#content "body"}}
             <aside class="nav-sidebar hide-inline">
                 <nav>
-                    <ul>
+                    <ul class="sidebar-list">
                         <li>
                             <div class="sc-branding">
                                 <i class="fa fa-cloud" aria-hidden="true"></i>
