add raw link to html

--- a/views/template/registration.hbs
+++ b/views/template/registration.hbs
@@ -44,6 +44,8 @@
                                     <div>
                                         <a href="{{url}}" style="background-color:#b10438;border-radius:3px;color:#FFFFFF;display:inline-block;font-family:'Helvetica',Arial,sans-serif;font-size:13px;height:45px;line-height:45px;text-align:center;text-decoration:none;text-transform:uppercase;width:150px;-webkit-text-size-adjust:none;mso-hide:all;" onmouseover="this.style.backgroundColor='#514F4E'" onmouseout="this.style.backgroundColor='#474544'">Registrieren</a>
                                     </div>
+                                    <br>
+                                    <a href="{{url}}" target="_blank">{{url}}</a>
                                 </td>
                             </tr>
                         </table>
