style file-search results

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -19,7 +19,7 @@
                                 </a>
                             </div>
                             <div class="card-text">
-
+                                <small class="file-location">{{#if this.context}}gefunden in: {{this.context}}{{/if}}</small><br>
                                 <a href="/files/file?download=1&file={{this.file}}"
                                    target="_blank"
                                    data-method="download">
