--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -194,7 +194,7 @@
         }
 
         .fa {
-            margin-top: 20px;
+            margin-top: 10px;
             margin-right: 15px;
             color: #ccc;
             &:hover {
@@ -209,6 +209,15 @@
             @media screen and (max-width: 575px) {
                 display: none;
             }
+        }
+        .card-text {
+            line-height: 2;
+        }
+
+        .file-location {
+            color: darkgrey;
+            padding-top: 5px;
+            line-height: 1;
         }
     }
 }
