add new feature modal

--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -28,11 +28,11 @@
                                         <img class="card-img-top circular" src="/images/login-right.png" alt="Card image cap">
                                     </div>
                                     <div class="card-block">
-                                        <h4 class="card-title">Platzhalter Titel</h4>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                                        <h4 class="card-title">Problem melden</h4>
+                                        <p class="card-text">Sie haben ein Problem mit der Schul-Cloud? Schreiben Sie uns doch!</p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="#" class="btn btn-primary disabled">Zum Platzhalter</a>
+                                        <a href="#" class="btn btn-primary">Problem melden</a>
                                     </div>
                                 </div>
                             </div>
@@ -42,11 +42,11 @@
                                         <img class="card-img-top circular" src="/images/login-left.png" alt="Card image cap">
                                     </div>
                                     <div class="card-block">
-                                        <h4 class="card-title">Platzhalter Titel</h4>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod</p>
+                                        <h4 class="card-title">Fact Sheet</h4>
+                                        <p class="card-text">Gucken Sie doch unser Fact Sheet an und finden Sie heraus was die Schul-Cloud ist und was sie nicht ist.</p>
                                     </div>
                                     <div class="card-footer">
-                                        <a href="#" class="btn btn-primary disabled">Zum Platzhalter</a>
+                                        <a href="#" class="btn btn-primary">Fact Sheet ansehen</a>
                                     </div>
                                 </div>
                             </div>
