--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -216,6 +216,12 @@
                     {{> "lib/forms/form-helpdesk"}}
                 {{/content}}
             {{/embed}}
+
+            {{#embed "lib/components/modal" class="feature-modal"}}
+                {{#content "body"}}
+                    {{> "lib/forms/form-features"}}
+                {{/content}}
+            {{/embed}}
         </section>
     {{/content}}
 {{/extend}}
