--- a/static/styles/homework/homework.scss
+++ b/static/styles/homework/homework.scss
@@ -3,6 +3,74 @@
 
 .route-homework {
   position: relative;
+  .section-upload {
+    width: 100%;
+    margin: 40px 0px;
+    cursor: pointer;
+    position: relative;
+
+    .form-upload {
+      width: 100%;
+      height: 150px;
+      border: 4px dashed #ddd;
+      background: #f9f9f9;
+      float: left;
+      font-size: 30px;
+      text-align: center;
+      color: #ccc;
+
+      &.focus {
+        background: #eee;
+      }
+
+      .dz-preview {
+        display: none;
+      }
+
+      span {
+        width: 90%;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    .progress-bar {
+      display: none;
+
+      .progress {
+        margin-top: 10px;
+        margin-bottom: -4px;
+        width: 100%;
+        background-color: #f5f5f5;
+        float: left;
+        height: 30px;
+        border-radius: 5px;
+        -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+        position: relative;
+
+        .percent {
+          position: absolute;
+          right: 10px;
+          line-height: 30px;
+          color: grey;
+          z-index: 2;
+          font-weight: bold;
+        }
+
+        .bar {
+          border-radius: 5px;
+          background-color: $colorHPIOrange;
+          height: 100%;
+          z-index: 5;
+          position: relative;
+        }
+      }
+    }
+  }
   .sort{
     float: left;
     margin: 10px 0 0;
