--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -1,5 +1,8 @@
 ﻿{{#content "scripts" mode="append"}}
     <script src="/vendor/ckeditor/ckeditor.js" defer></script>
+    <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
+    <script src="/scripts/files.js" type="text/javascript" defer></script>
+    <script src="/scripts/jquery.cookie.js" type="text/javascript" defer></script>
     <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
             $(document).ready(function () {
@@ -68,13 +71,14 @@
 {{/content}}
 {{#content "styles" mode="append"}}
     <link rel="stylesheet" href="/styles/homework/assignment.css"/>
+    <link rel="stylesheet" href="/styles/homework/homework.css"/>
     <link rel="stylesheet" href="/styles/homework/submissions.css"/>
     <style>.section-title h4::before{content:"● {{#if private}}🔒 {{/if}}";color:{{this.color}};</style>
 {{/content}}
 
 {{#extend "homework/homework"}}
     {{#content "page"}}
-
+    <div class="route-homework">
         <section class="section-homework">
             <div class="dates">
                 {{availableDateF}} ({{availableTimeF}})<br/>
@@ -115,5 +119,6 @@
                 </div>
             </div>
         </section>
+    </div>
     {{/content}}
 {{/extend}}
