--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -3,6 +3,23 @@
         <div class="description">
             {{{this.description}}}
         </div>
+        <section class="section-upload" data-path="course/{{this.courseId._id}}/homework/{{this._id}}/">
+            <div class="container-fluid">
+                <div class="row">
+                    <form class="form-upload dz-clickable" action="/files/upload/" method="post">
+                        <div class="dz-default dz-message" data-dz-message="">
+                            <span><i class="fa fa-cloud-upload dz-clickable"></i> Dateien zum Hochladen ablegen.</span>
+                        </div>
+                    </form>
+                    <div class="progress-bar">
+                        <div class="progress">
+                            <span class="percent"></span>
+                            <div class="bar" style="width:0%">&nbsp;</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         {{#ifvalue teacherId value=currentUser._id}}
             <a class="btn btn-primary btn-edit" href="/homework/{{_id}}/json">Bearbeiten</a>
             <a class="btn btn-primary btn-delete" 
