--- a/views/homework/form-assignment.hbs
+++ b/views/homework/form-assignment.hbs
@@ -1,4 +1,4 @@
-﻿﻿<input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
+﻿<input name="schoolId" type="hidden" data-force-value="true" value="{{currentSchool}}" />
 
 <input name="teacherId" type="hidden" data-force-value="true" value="{{currentUser._id}}" />
 
