--- a/views/homework/homework.hbs
+++ b/views/homework/homework.hbs
@@ -2,4 +2,4 @@
     {{#content "scripts" mode="append"}}
         <script src="/scripts/homework.js" type="text/javascript" defer></script>
     {{/content}}
-{{/extend}}
+{{/extend}}Bewertung
