--- a/views/homework/overview.hbs
+++ b/views/homework/overview.hbs
@@ -6,6 +6,7 @@
 {{#content "scripts" mode="append"}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.23/webcomponents-lite.min.js" defer></script>
     <script src="/vendor/ckeditor/ckeditor.js" defer></script>
+    <script src="/scripts/dropzone/dropzone.js" type="text/javascript" defer></script>
     <script src="/scripts/jquery/jquery.datetimepicker.full.min.js" type="text/javascript" defer></script>
     <script>
         window.addEventListener('DOMContentLoaded', function() {
@@ -172,7 +173,7 @@
                         {{> "homework/form-assignment"}}
                     {{/content}}
                 {{/embed}}
-                {{#embed "lib/components/modal-form" method="post" class="add-modal" action="/homework/"}}
+                {{#embed "lib/components/modal-form" method="post" class="add-modal"}}
                     {{#content "fields"}}
                         {{> "homework/form-assignment"}}
                     {{/content}}
