working uploads for assignment

--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -14,7 +14,7 @@
 
         <div class="route-files">
             {{#if canUploadFile}}
-                <section class="section-upload" data-path="user">
+                <section class="section-upload" data-path="{{path}}">
                     <div class="container-fluid">
                         <div class="row">
                             <form class="form-upload dz-clickable" action="/files/upload/">
