--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -7,7 +7,7 @@
                 keine Beschreibung vorhanden
             {{/if}}
         </div>
-        <section class="section-upload" data-path="course/{{this.courseId._id}}/homework/{{this._id}}/">
+        <section class="section-upload" data-path="courses/{{this.courseId._id}}/homework/{{this._id}}/">
             <div class="container-fluid">
                 <div class="row">
                     <form class="form-upload dz-clickable" action="/files/upload/" method="post">
@@ -22,6 +22,65 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="files">
+            <div class="row">
+                {{#each files}}
+                    <div class="col-sm-6 col-xs-12 col-md-4">
+                        <div class="card file" data-href="/files/file?file={{this.name}}" data-file-name="{{this.name}}"
+                             onMouseOver="document.getElementById('{{this.name}}').innerHTML = writeFileSizePretty({{this.size}})"
+                             onMouseOut= "document.getElementById('{{this.name}}').innerHTML = ''">
+                            <div class="openFile">
+                                <div class="card-block"
+                                     onclick="location.href='#file-view';
+                                             fileViewer('{{this.type}}', '{{this.file}}','{{this.key}}');">
+                                    <div class="card-title">
+                                        <div class="col-sm-3 no-padding">
+                                            <div class="file-preview"
+                                                 style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
+                                        </div>
+                                        <a class="title">
+                                            {{this.name}}
+                                        </a>
+                                    </div>
+                                    <div class="card-text">
+
+                                        <a href="/files/file?download=1&file={{this.file}}"
+                                           target="_blank"
+                                           data-method="download">
+                                            <i class="fa fa-cloud-download"></i>
+                                        </a>
+
+                                        <!--<form action="/files/file/" method="post" class="inline">
+                                                <input type="hidden" name="_method" value="delete" />
+                                                <input type="hidden" name="name" value="{{this.name}}" />
+                                                <input type="hidden" name="path" value="{{this.path}}" />
+                                                <button type="submit" class="btn btn-secondary btn-sm {{this.class}}">
+                                                    <i class="fa fa-{{this.icon}}"></i> {{this.label}}
+                                                </button>
+                                            </form>-->
+
+                                        <a href="/files/file/"
+                                           target="_blank"
+                                           data-method="delete"
+                                           data-file-name="{{this.name}}"
+                                           data-file-path="{{this.path}}">
+                                            <i class="fa fa-trash-o"></i>
+                                        </a>
+
+                                        <a href="#"
+                                           class="btn-file-share"
+                                           data-file-path="{{this.key}}">
+                                            <i class="fa fa-share"></i>
+                                        </a>
+                                        <small class="file-info" id="{{this.name}}"></small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                {{/each}}
             </div>
         </section>
         {{#ifvalue teacherId value=currentUser._id}}
