--- a/static/styles/homework/assignment.scss
+++ b/static/styles/homework/assignment.scss
@@ -53,4 +53,127 @@
       color: $colorHPIOrange;
     }
   }
+  .section-upload {
+    width: 100%;
+    margin: 40px 0px;
+    cursor: pointer;
+    position: relative;
+
+    .form-upload {
+      width: 100%;
+      height: 150px;
+      border: 4px dashed #ddd;
+      background: #f9f9f9;
+      float: left;
+      font-size: 30px;
+      text-align: center;
+      color: #ccc;
+
+      &.focus {
+        background: #eee;
+      }
+
+      .dz-preview {
+        display: none;
+      }
+
+      span {
+        width: 90%;
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    .progress-bar {
+      display: none;
+
+      .progress {
+        margin-top: 10px;
+        margin-bottom: -4px;
+        width: 100%;
+        background-color: #f5f5f5;
+        float: left;
+        height: 30px;
+        border-radius: 5px;
+        -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+        position: relative;
+
+        .percent {
+          position: absolute;
+          right: 10px;
+          line-height: 30px;
+          color: grey;
+          z-index: 2;
+          font-weight: bold;
+        }
+
+        .bar {
+          border-radius: 5px;
+          background-color: $colorHPIOrange;
+          height: 100%;
+          z-index: 5;
+          position: relative;
+        }
+      }
+    }
+  }
+  .files {
+    width: 100%;
+    float: left;
+    margin-bottom: 40px;
+
+    h5 {
+      color: $colorHPIRed;
+      padding: 10px 0px 20px;
+    }
+
+    .modal-body {
+      button {
+        margin-left: 5px;
+      }
+    }
+
+    .card.file {
+      min-height: 80px;
+      color: $colorHPIRed;
+      text-overflow: ellipsis;
+      overflow:hidden;
+      cursor: pointer;
+
+      &:hover {
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+        background: #f9f9f9;
+      }
+
+      .file-preview {
+        width: 90%;
+        height: 65px;
+        float: left;
+        background: no-repeat center center;
+        background-size: cover;
+      }
+
+      .fa {
+        margin-top: 20px;
+        margin-right: 15px;
+        color: #ccc;
+        &:hover {
+          color: $colorHPIRed;
+        }
+      }
+      .title {
+        position: absolute;
+        white-space: nowrap;
+      }
+      .file-preview {
+        @media screen and (max-width: 575px) {
+          display: none;
+        }
+      }
+    }
+  }
 }
